test/compilable/imports/bar11136.d
module test11136.bar11136;
