test/fail_compilation/imports/ice22121/package2/package3/package.d
module ice22121.package2.package3;
